fixed scrollbar

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,6 +26,9 @@ textarea:focus, input:focus{
     outline: none;
 }
 
+body{
+    overflow:overlay;
+}
 
 #scene{
     color: white;
@@ -166,12 +169,12 @@ nav{
     width: 0.6vw;
   }
   ::-webkit-scrollbar-track {
-    background: #363636;
+    background: none;
   }
   ::-webkit-scrollbar-thumb {
-    background: #ff6489;
+    background: rgba(255,255,255,0.5);
     border-radius: 2px;
   }
   ::-webkit-scrollbar-thumb:hover {
-    background: #ff6489b0;
+    background: rgba(255,255,255,0.8);
   }
